Fixed an issue with View menu push controls off screen and pushed up the controls from bottom by 20px

--- a/widgets/COEMarkup/markupCOE.widget.scss
+++ b/widgets/COEMarkup/markupCOE.widget.scss
@@ -26,7 +26,7 @@
 
 .markup-toolbar {
 	position: absolute;
-	bottom: 10px !important;
+	//bottom: 20px !important;
 	top: unset !important;
 	left: calc(50vw - 203px); // 203px is half of the width
 	width: 405px;
